fix(ui): RunInfo - normalize spacing

--- a/packages/ui/src/components/run-info/run-info.module.css
+++ b/packages/ui/src/components/run-info/run-info.module.css
@@ -25,7 +25,6 @@
 
 .currentMetric {
   color: var(--color-heading);
-  line-height: var(--line-height-heading);
   white-space: nowrap;
   font-weight: bold;
 }
@@ -44,7 +43,7 @@
 .baselineMetric {
   color: var(--color-text-ultra-light);
   font-size: var(--size-small);
-  line-height: var(--line-height-heading);
+  line-height: 1;
 }
 
 /* Loading state */
